# concurrency-philosophers-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Philosopher.h  Table.h  Visualization.h
philosophers/: README.md  main.cpp
philosophers/src/: Philosopher.cpp
src/: Philosopher.cpp  Table.cpp  Visualization.cpp
